source/css/scss-altinnett/objects/_collapse.scss
// ----------------------------------
// COLLAPSE HEADER
// ----------------------------------

.an-collapse-minusmargin {
  margin-left: -12px;
  @include media-breakpoint-up( md ) {
    margin-left: -96px;
  }
  @include media-breakpoint-up( lg ) {
    margin-left: -38px;
  }
  @include media-breakpoint-up( lg ) {
    margin-left: -26px;
  }
}

.an-collapse-minusmarginPanel {
  margin-left: 0;
  @include media-breakpoint-up( md ) {
    margin-left: -26px;
  }
}

